# multinomials

./: .gitignore  .travis.yml  MANIFEST  Makefile  Makefile.common  README.md  _CoqProject  config.nix  configure  coq-mathcomp-multinomials.opam  default.nix  descr  dune  dune-project  freeg.v  meta.yml  mpoly.v  nixpkgs.nix  opam  package.nix  poset.v  rocq-mathcomp-multinomials.opam
.github/workflows/: ci.yml  coq-action.yml  docker-action.yml  nix-action-coq8.10+mc1.11.yml  nix-action-coq8.11+mc1.11.yml  nix-action-coq8.11+mc1.12.yml  nix-action-coq8.12+mc1.11.yml  nix-action-coq8.12+mc1.12.yml  nix-action-coq8.13+mc1.12.yml
.nix/: config.nix  nixpkgs.nix
finmap/: finmap.v  set.v
refinements/: compoly.v
scripts/: coq-compat
src/: .dir-locals.el  Pol_mpoly.v  dune  dune.in  freeg.v  fsfun.v  monalg.v  mpoly.v  poset.v  ssrcomplements.v  xfinmap.v
ssreflect/: Makefile  action.v  automorphism.v  bigop.v  binomial.v  choice.v  div.v  eqtype.v  finalg.v  finfun.v  fingroup.v  finset.v  fintype.v  generic_quotient.v  matrix.v  morphism.v  mxalgebra.v  path.v  perm.v  poly.v  prime.v  quotient.v  seq.v  ssralg.v  ssrbool.v  ssreflect.ml4  ssreflect.v  ssrfun.v  ssrint.v  ssrmatching.ml4  ssrmatching.mli  ssrmatching.v  ssrnat.v  ssrnum.v  vector.v  zmodp.v
ssreflect-extra/: Makefile
