opam-version: "2.0"
maintainer: "pierre-yves@strub.nu"
homepage: "https://github.com/math-comp/multinomials"
bug-reports: "https://github.com/math-comp/multinomials/issues"
dev-repo: "git+https://github.com/math-comp/multinomials.git"
license: "CeCILL-B"
authors: ["Pierre-Yves Strub"]
build: [
  [ "bash" "./configure" ]
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "coq"                    {(>= "8.16" & < "8.18~") | = "dev"}
  "dune"                   {>= "2.8"}
  "coq-mathcomp-ssreflect" {(>= "2.0" & < "2.1~") | = "dev"}
  "coq-mathcomp-algebra"
  "coq-mathcomp-bigenough" {(>= "1.0" & < "1.1~") | = "dev"}
  "coq-mathcomp-finmap"    {(>= "2.0" & < "2.1~") | = "dev"}
]
tags: [
  "keyword:multinomials"
  "keyword:monoid algebra"
  "category:Math/Algebra/Multinomials"
  "category:Math/Algebra/Monoid algebra"
  "logpath:mathcomp.multinomials"
]
synopsis: "A Multivariate polynomial Library for the Mathematical Components Library"
