opam-version: "2.0"
maintainer: "pierre-yves@strub.nu"
homepage: "https://github.com/math-comp/multinomials"
bug-reports: "https://github.com/math-comp/multinomials/issues"
dev-repo: "git+https://github.com/math-comp/multinomials.git"
license: "CECILL-B"
authors: ["Pierre-Yves Strub"]
build: [
  [ "dune" "build" "-p" name "-j" jobs ]
]
depends: [
  "coq"                    {(>= "8.16" & < "8.20~") | = "dev"}
  "dune"                   {>= "3.8"}
  "coq-mathcomp-ssreflect" {(>= "2.0" & < "2.3~") | = "dev"}
  "coq-mathcomp-algebra"
  "coq-mathcomp-bigenough" {(>= "1.0" & < "1.1~") | = "dev"}
  "coq-mathcomp-finmap"    {(>= "2.0" & < "2.2~") | = "dev"}
]
tags: [
  "keyword:multinomials"
  "keyword:monoid algebra"
  "category:Mathematics/Algebra/Multinomials"
  "category:Mathematics/Algebra/Monoid algebra"
  "logpath:mathcomp.multinomials"
]
synopsis: "A Multivariate polynomial Library for the Mathematical Components Library"
