(coq.theory
 (name mathcomp.multinomials)
 (package coq-mathcomp-multinomials)
 (flags
  -w -ambiguous-paths
  -w -notation-overridden
  -w -redundant-canonical-projection
  -w -projection-no-head-constant)
 (theories
  elpi
  HB
  mathcomp.ssreflect
  mathcomp.fingroup
  mathcomp.algebra
  mathcomp.bigenough
  mathcomp.finmap))
